# Langchain_LangGraph

./: .gitignore  main.py  pyproject.toml
01-LangChain_ReAct/: 01-SimpleAgent_ReAct.py  02-Struc-OP-ReAct.py
02-agents-under-the-hood/: agents-under-the-hood.py
03-RAG-GIST/: ingestion.py  main.py  mediumblog1.txt
04-documentation-helper-RAG/: app.py  doc-ingestion.py
04-documentation-helper-RAG/backend/: core.py
LangChain_ReAct/: 01-SimpleAgent_ReAct.py
agents-under-the-hood/: 2.AgentCallingRawFunctionCalling.py  3-Raw-ReAct-Prompt.py
