[project]
name = "langchain-udemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.9",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "langchain-community>=0.3.27",
    "langchain-pinecone>=0.2.11",
    "langchainhub>=0.1.21"
]
